--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,8 @@
 .idea/
 # Others
 *.pyc
-
-# Test data
-# MR.*
-# *.nii
+# Test configuration
+alembic.ini
 
 ### Python template
 # Byte-compiled / optimized / DLL files
