--- a/circle.yml
+++ b/circle.yml
@@ -2,14 +2,15 @@ machine:
   pre:
     - curl -sSL https://s3.amazonaws.com/circle-downloads/install-circleci-docker.sh | bash -s -- 1.10.0
     - curl -sSL https://raw.githubusercontent.com/harbur/captain/v1.1.0/install.sh | bash
+    - pip install --upgrade pip
+    - pip install docker-compose==1.8.1 pre-commit
   services:
     - docker
 dependencies:
   override:
     - docker version
     - docker info
-    - pip install --upgrade pip
-    - pip install docker-compose==1.8.1
+    - pre-commit run --all-files
     - PATH=$PATH:/$HOME/.captain/bin/ ./build.sh
 test:
   override:
