--- a/hbp.yml
+++ b/hbp.yml
@@ -1,8 +1,8 @@
-description: "This library provides functions to import data into an I2B2 DB schema"
+name: data-catalog-setup
+description: "Database setup and migration scripts for the Data Catalog database"
 
 long_description: |
-  This library provides functions to import data into an I2B2 DB schema.
-
+  Migration scripts for the Data Catalog database used to capture provenance information on all files managed by the Data Factory.
 
 authors:
   - author: Mirco Nasuti
@@ -14,65 +14,67 @@ authors:
 platform: MIP
 component:
   mip_building_block: data-factory
-  nature: library
+  nature: tool
 
 license:
   name: Apache 2.0
   badge: https://img.shields.io/badge/license-Apache--2.0-blue.svg
-  url: https://github.com/LREN-CHUV/i2b2-import/blob/master/LICENSE
+  url: https://github.com/LREN-CHUV/data-catalog-setup/blob/master/LICENSE
 
 code_repositories:
   - name: chuv-gitlab
     visibility: private
-    url: https://___.chuv.ch/data-factory/i2b2-import/
-    git_clone: https://___.chuv.ch/data-factory/i2b2-import.git
+    url: https://___.chuv.ch/data-factory/data-catalog-setup/
+    git_clone: https://___.chuv.ch/data-factory/data-catalog-setup.git
   - name: github/LREN-CHUV
     visibility: public
-    url: https://github.io/LREN-CHUV/i2b2-import/
-    git_clone: https://github.io/LREN-CHUV/i2b2-import.git
+    url: https://github.io/LREN-CHUV/data-catalog-setup/
+    git_clone: https://github.io/LREN-CHUV/data-catalog-setup.git
   - name: github/HBPMedical
     visibility: public
-    url: https://github.io/HBPMedical/i2b2-import/
-    git_clone: https://github.io/HBPMedical/i2b2-import.git
+    url: https://github.io/HBPMedical/data-catalog-setup/
+    git_clone: https://github.io/HBPMedical/data-catalog-setup.git
 
 code_quality_checks:
   codacy:
     badge: https://api.codacy.com/project/badge/Grade/850854199e9c4fbca8386a10bf1c4867
-    url: "https://www.codacy.com/app/hbp-mip/i2b2-import?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=LREN-CHUV/i2b2-import&amp;utm_campaign=Badge_Grade"
-  landscape:
-    badge: "https://landscape.io/github/LREN-CHUV/i2b2-import/master/landscape.svg?style=flat"
-    url: https://landscape.io/github/LREN-CHUV/i2b2-import/master
+    url: "https://www.codacy.com/app/hbp-mip/data-catalog-setup?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=LREN-CHUV/data-catalog-setup&amp;utm_campaign=Badge_Grade"
 
 testing:
-  unit_testing: []
+  unit_testing:
+    - sources: /tests
+    - command: /tests/tesh.sh
 
 release_management:
   current_version: 1.5.20
-  current_code_release: https://github.com/HBPMedical/i2b2-import/archive/1.5.20.zip
-  current_binary_release: https://pypi.python.org/pypi/i2b2-import/1.5.20
+  current_code_release: https://github.com/HBPMedical/data-catalog-setup/archive/1.5.20.zip
+  current_docker_release: docker pull hbpmip/data-catalog-setup:1.5.20
   release_script: 'publish.sh'
 
 continuous_integration:
   - name: CircleCI
     description: "Check style and execute unit tests"
-    url: https://circleci.com/gh/LREN-CHUV/i2b2-import
-    badge: https://circleci.com/gh/LREN-CHUV/i2b2-import.svg?style=svg
+    url: https://circleci.com/gh/LREN-CHUV/data-catalog-setup
+    badge: https://circleci.com/gh/LREN-CHUV/data-catalog-setup.svg?style=svg
     actions:
       - code_style
       - unit_tests
 
 distribution:
-  pypi:
-    badge: https://img.shields.io/pypi/v/i2b2-import.svg
-    url: https://pypi.python.org/pypi/i2b2-import/
+  docker_hub:
+    name: hbpmip/data-catalog-setup
+    current_tag: 1.5.20
+    url: https://hub.docker.com/r/hbpmip/data-catalog-setup/
+    badge: https://img.shields.io/badge/docker-hbpmip%2Fdata--catalog--setup-008bb8.svg
+    command: docker pull hbpmip/data-catalog-setup:2.1.2
 
 planning:
   github:
     name: Issues on Github
-    url: https://github.com/LREN-CHUV/i2b2-import/issues
+    url: https://github.com/LREN-CHUV/data-catalog-setup/issues
 
 related_projects:
-  - name: i2b2-setup
+  - name: data-tracking
     mip_building_block: data-factory
-    relationship: depends-on-other
+    relationship: other-depends-on
     relationship_scope: runtime
