--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,8 +5,6 @@ tag = True
 tag_name = {new_version}
 parse = (?P<major>\d+)\.(?P<minor>\d+)(\.(?P<patch>\d+))?
 
-[bumpversion:file:setup.cfg]
-
-[bumpversion:file:setup.py]
+[bumpversion:file:README.md]
 
 [bumpversion:file:hbp.yml]
