CircleCI: fix test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,18 +26,6 @@ jobs:
           command: |
             PATH=$PATH:/$HOME/.captain/bin/ ./build.sh
       - run:
-          name: "Test with one dataset"
+          name: "Test the project"
           command: |
-            PATH=$PATH:/$HOME/.captain/bin/ ./tests/one-dataset/test.sh
-      - run:
-          name: "Test with several datasets"
-          command: |
-            PATH=$PATH:/$HOME/.captain/bin/ ./tests/several-datasets/test.sh
-      - run:
-          name: "Test creating a view joining tables"
-          command: |
-            PATH=$PATH:/$HOME/.captain/bin/ ./tests/joined-tables/test.sh
-      - run:
-          name: "Test creating a view for a union of tables"
-          command: |
-            PATH=$PATH:/$HOME/.captain/bin/ ./tests/union-of-tables/test.sh
+            PATH=$PATH:/$HOME/.captain/bin/ ./tests/test.sh
